.happypack/s--372848608
SyntaxError: Unexpected character '' (122:8)

[0m [90m 120 | [39m        notify([32m'success'[39m[33m,[39m [32m'åˆ é™¤æˆåŠŸ'[39m)[33m;[39m
 [90m 121 | [39m        $(evt[33m.[39mtarget)[33m.[39mparents([32m'.task-manage-item'[39m)[33m.[39mremove()[33m;[39m
[31m[1m>[22m[39m[90m 122 | [39m        [37m[41m[1m[22m[49m[39mgetSortList([32m'#sortable-list'[39m)[33m;[39m
 [90m     | [39m        [31m[1m^[22m[39m
 [90m 123 | [39m      } [36melse[39m {
 [90m 124 | [39m        notify([32m'danger'[39m[33m,[39m [32m'åˆ é™¤å¤±è´¥ï¼š'[39m [33m+[39m data[33m.[39mmessage)[33m;[39m
 [90m 125 | [39m      }[0m

BabelLoaderError: SyntaxError: Unexpected character '' (122:8)

[0m [90m 120 | [39m        notify([32m'success'[39m[33m,[39m [32m'åˆ é™¤æˆåŠŸ'[39m)[33m;[39m
 [90m 121 | [39m        $(evt[33m.[39mtarget)[33m.[39mparents([32m'.task-manage-item'[39m)[33m.[39mremove()[33m;[39m
[31m[1m>[22m[39m[90m 122 | [39m        [37m[41m[1m[22m[49m[39mgetSortList([32m'#sortable-list'[39m)[33m;[39m
 [90m     | [39m        [31m[1m^[22m[39m
 [90m 123 | [39m      } [36melse[39m {
 [90m 124 | [39m        notify([32m'danger'[39m[33m,[39m [32m'åˆ é™¤å¤±è´¥ï¼š'[39m [33m+[39m data[33m.[39mmessage)[33m;[39m
 [90m 125 | [39m      }[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)
    at Object.HappyForegroundThreadPool.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:320:25)
    at HappyPlugin.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:236:32)
    at Object.HappyLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/Users/kz/projects/edusoho/node_modules/.0.6.9@webpack-core/lib/NormalModuleMixin.js:155:71)